[Comment] Fix gap + S size (#3016)

--- a/packages/scss/src/components/comment/component.scss
+++ b/packages/scss/src/components/comment/component.scss
@@ -2,7 +2,7 @@
 	container: comment / inline-size;
 	display: flex;
 	flex-direction: column;
-	gap: var(--pr-t-spacings-100);
+	gap: var(--pr-t-spacings-50);
 	max-width: 40rem;
 
 	@at-root ($atRoot) {
@@ -17,9 +17,9 @@
 		.comment-infos-content {
 			flex-direction: column;
 			display: var(--components-comment-info-content-display);
-			font-size: var(--components-comment-info-fontSize);
-			line-height: var(--components-comment-info-lineHeight);
-			margin-top: var(--components-comment-info-content-marginTop);
+			font-size: var(--sizes-S-fontSize);
+			line-height: var(--sizes-S-lineHeight);
+			margin-block: var(--pr-t-spacings-25);
 		}
 
 		.comment-infos-date {
